# MyImages

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/qiaoyunhao/myimages/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: imgCanny.cpp  native-lib.cpp
app/src/main/java/com/example/qiaoyunhao/myimages/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/qiaoyunhao/myimages/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
